<resources>
    <string name="app_name">MyAppartment</string>

    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_chat">Chat</string>
    <string name="action_apartment">Apartment</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="main_projects">Projects</string>
    <string name="main_mobile_number">Mobile Number</string>
    <string name="main_email">Email</string>
    <string name="main_address">Address</string>
    <string name="main_name">Name</string>
    <string name="main_welcome">Welcome to your user area!</string>
    <string name="login">Login</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="hello_world">Hello world!</string>
    <string name="your_user_data">Your user details:</string>
    <string name="language">Language:</string>
    <string name="language_english">English</string>
    <string name="language_portuguese">Brazilian portuguese</string>
    <string name="language_french">Franch</string>
    <string name="language_german">German</string>
    <string name="main_password">Password</string>
    <string name="already_member">Already a member? Login</string>
    <string name="create">Create</string>
</resources>
