<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sourcey.myappartment.activities.SettingsActivity"
    android:orientation="vertical"
    android:paddingTop="56dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_settings"
        android:gravity="center"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="@color/oil" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:gravity="start"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <RadioButton
        android:id="@+id/rb_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/language_english"/>

    <RadioButton
        android:id="@+id/rb_portuguese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/language_portuguese"/>

    <RadioButton
        android:id="@+id/rb_french"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/language_french"/>

    <RadioButton
        android:id="@+id/rb_german"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/language_german"/>

    <Button
        android:id="@+id/bt_confirm_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Confirm" />

</LinearLayout>
