<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">


        <!-- Welcome Label-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/main_welcome"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/oil" />
        </android.support.design.widget.TextInputLayout>

        <!-- Title Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/your_user_data"
                android:textSize="23sp"
                android:textStyle="bold"
                android:textColor="@color/oil" />
        </android.support.design.widget.TextInputLayout>

        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/main_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/oil" />
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/main_name"
                android:textSize="20sp"
                android:textColor="@color/oil" />
        </android.support.design.widget.TextInputLayout>

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/main_email"
                android:textSize="20sp"
                android:textColor="@color/oil"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/main_email"
                android:textSize="20sp"
                android:textColor="@color/oil" />
        </android.support.design.widget.TextInputLayout>

        <!-- Address Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/main_address"
                android:textSize="20sp"
                android:textColor="@color/oil"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/main_address"
                android:textSize="20sp"
                android:textColor="@color/oil" />
        </android.support.design.widget.TextInputLayout>

        <!-- mobile number -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/main_mobile_number"
                android:textSize="20sp"
                android:textColor="@color/oil"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_mobile_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/main_mobile_number"
                android:textSize="20sp"
                android:textColor="@color/oil" />
        </android.support.design.widget.TextInputLayout>



        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_logout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/main_projects" />

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_language"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="Change language" />

    </LinearLayout>
</ScrollView>